s3 object details, delete object and delete objects endpoints added
