# routes/s3.ts
@@ -5,5 +5,8 @@ const S3Router = Router();
 
 S3Router.post('/bucket', S3Service.createBucket);
 S3Router.get('/bucket/:name/objects', S3Service.bucketObjects);
+S3Router.get('/bucket/:bucketName/:objectKey/details', S3Service.getBucketObjDetails);
+S3Router.delete('/bucket/:bucketName/:objectKey/delete', S3Service.deleteBucketObject);
+S3Router.delete('/bucket/:bucketName/deleteObjects', S3Service.deleteBucketObjects);
 
 export { S3Router };
